@@ -2,6 +2,7 @@
 
 ## Version 4.2.1
 
+* Adding support for source_directory and output_name_format in config file (thanks to cwills75)
 * Fixing #129 no subtitles should be enabled, removing need for mkvpropedit (thanks to wiedemanu)
 * Fixing network paths not working on Windows
 
